# ray

./: CMakeLists.txt  Makefile.win  main.cpp  oprof_setup.sh  view_profile_results.sh
BRDFs/: BRDF.cpp  BRDF.h  GlossySpecular.cpp  GlossySpecular.h  Lambertian.cpp  Lambertian.h  PerfectSpecular.cpp  PerfectSpecular.h
Cameras/: Camera.cpp  Camera.h  Pinhole.cpp  Pinhole.h  ThinLens.cpp  ThinLens.h
GUI/: SDLApp.cpp  SDLApp.h
Geometry/: Annulus.cpp  Annulus.h  BBox.cpp  BBox.h  Box.cpp  Box.h  Cylinder.cpp  Cylinder.h  Disk.cpp  Disk.h  GeometryManager.cpp  GeometryManager.h  GeometryObject.cpp  GeometryObject.h  Instance.cpp  Instance.h  LightObject.h  Plane.cpp  Plane.h  Rectangle.cpp  Rectangle.h  Sphere.cpp  Sphere.h  StarBox.cpp  StarBox.h  Stars.cpp  Stars.h  Torus.cpp  Torus.h
Lights/: Ambient.cpp  Ambient.h  AmbientOccluder.cpp  AmbientOccluder.h  AreaLight.cpp  AreaLight.h  Direction.cpp  Direction.h  Environment.cpp  Environment.h  Light.h  LightManager.cpp  LightManager.h  PositionLight.cpp  PositionLight.h  SpotLight.cpp  SpotLight.h
Materials/: Atmosphere.cpp  Atmosphere.h  Emissive.cpp  Emissive.h  Material.cpp  Material.h  Matte.cpp  Matte.h  Phong.cpp  Phong.h  Reflective.cpp  Reflective.h
Math/: Maths.cpp  Maths.h  Matrix.cpp  Matrix.h  Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  Ray.cpp  Ray.h  Roots3And4.cpp  Vector3D.cpp  Vector3D.h
Noise/: CubicNoise.cpp  CubicNoise.h  LatticeNoise.cpp  LatticeNoise.h  LinearNoise.cpp  LinearNoise.h
Parser/: Hash.cpp  Hash.h  Parser.cpp  Parser.h  Tokenizer.cpp  Tokenizer.h  Value.cpp  Value.h
Samplers/: MultiJittered.cpp  MultiJittered.h  Regular.cpp  Regular.h  Sampler.cpp  Sampler.h
Storage/: Grid.cpp  Grid.h  KdTree.cpp  KdTree.h  Storage.cpp  Storage.h
Textures/: GraniteTexture.cpp  GraniteTexture.h  ImageTexture.cpp  ImageTexture.h  MarbleTexture.cpp  MarbleTexture.h  NoiseTexture.cpp  NoiseTexture.h  PlaneChecker.cpp  PlaneChecker.h  SkyTexture.cpp  SkyTexture.h  StarsTexture.cpp  StarsTexture.h  TInstance.cpp  TInstance.h  Texture.cpp  Texture.h  WoodTexture.cpp  WoodTexture.h
Tracer/: AreaLighting.cpp  AreaLighting.h  MultiObjects.cpp  MultiObjects.h  RayCast.cpp  RayCast.h  Tracer.cpp  Tracer.h
Utility/: Animation.cpp  Animation.h  ChunkParser.cpp  ChunkParser.h  Color.cpp  Color.h  MedianFilter.cpp  MedianFilter.h  PerfCounter.cpp  PerfCounter.h  SDL_Utility.cpp  SDL_Utility.h  ShadeRecord.cpp  ShadeRecord.h  ViewPlane.cpp  ViewPlane.h  bytes.h  macros.h  ply.cpp  ply.h
(+56 files in other folders)
